<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="240dp"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="40dp"
         app:cardBackgroundColor="@android:color/holo_orange_light"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/moncash"
             android:textColor="@color/white"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/saldomoncash"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:background="@color/shimmer_color"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>


     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="-99dp"
         android:layout_marginEnd="250dp"
         app:cardBackgroundColor="@android:color/holo_red_light"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/topup"
             android:textColor="@color/white"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/saldotopup"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
             android:background="@color/shimmer_color"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>

     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="260dp"
         android:layout_marginTop="-99dp"
         android:visibility="gone"
         app:cardBackgroundColor="@color/colorverde"
         app:cardCornerRadius="10dp"
         app:cardElevation="10dp">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/sale"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textStyle="bold" />

         <TextView
             android:id="@+id/totalventasagent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:text="0"
             android:textColor="@color/white"
             android:textSize="15sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>

 </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>